--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.5",
-    "react-on-screen": "^2.1.1"
+    "react-on-screen": "^2.1.1",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
